[package]
name = "swish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["gen_pay_ref"]
gen_pay_ref = ["dep:uuid"]

[dependencies]
url = { version = '2.4.0', features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rustls = "0.21.6"
reqwest = { version = "0.11", features = ["json", "native-tls", "rustls-tls"] }
uuid = { version = "1.4.1", features = ["v4"], optional = true }
time = {version = "0.3", features = ["serde", "formatting", "parsing"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
rustls-pemfile = "1.0.3"
tokio-test = "0.4.3"
axum = "0.6"
ngrok = { version = "0.13", features = ["axum"] }